# llm2024-competition-runner

./: README.md  generate.py  hello.py  pyproject.toml  requirements.txt
