[project]
name = "llm2024-competition-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.4",
    "polars>=1.16.0",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
    "types-tqdm>=4.67.0.20241119",
]


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88         # blackと同じデフォルト値
target-version = "py311" # Pythonのバージョンに合わせて変更してください

# 有効にするルール
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "W",   # pycodestyle warnings
]

# 無視するルール
lint.ignore = [
    "E501", # line length violations (handled by formatter)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
